Bugfix/empty task (#5)
Squashed on merging

--- a/style.css
+++ b/style.css
@@ -44,3 +44,6 @@ body {
 #div {
     color: blue;
 }
+
+#div {
+  color: blue;
